# ehpc-research

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.streamlit/: config.toml
core/: evaluator_heads.py  prompt_compressor.py
demo/: streamlit_app.py
deploy/ehpc-research/: Chart.yaml  values.yaml
deploy/ehpc-research/templates/: deployment.yaml  service.yaml
evaluation/: benchmarks.py
experiments/: run_paper_experiments.py
visualization/: attention_viz.py
